--- a/index.html
+++ b/index.html
@@ -9,74 +9,207 @@
       background: #f5f5f5;
       margin: 0;
       padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 20px;
-    }
-    .day {
-      background: #ffffff;
-      border-radius: 12px;
-      padding: 16px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-    }
-    .day h2 {
-      margin-top: 0;
-      font-size: 20px;
-      border-bottom: 2px solid #eee;
-      padding-bottom: 8px;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-    li {
-      padding: 6px 0;
-      border-bottom: 1px dashed #ddd;
-      font-size: 15px;
-    }
-    li:last-child {
-      border-bottom: none;
-    }
+    }h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.folders {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 15px;
+}
+
+.folder {
+  background: white;
+  border-radius: 12px;
+  padding: 20px;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  transition: transform 0.2s;
+}
+
+.folder:hover {
+  transform: scale(1.05);
+}
+
+.day {
+  display: none;
+  margin-top: 20px;
+}
+
+.day.active {
+  display: block;
+}
+
+.task {
+  background: white;
+  padding: 12px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+button {
+  margin-top: 20px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 8px;
+  background: #000;
+  color: white;
+  cursor: pointer;
+}
+
   </style>
 </head>
-<body>
-  <h1>📁 Planner Semanal de Férias</h1>  <div class="container"><div class="day">
-  <h2>📂 Segunda / Terça / Quinta / Sábado</h2>
-  <ul>
-    <li>08:00 – Acordar + café</li>
-    <li>08:30 – Academia</li>
-    <li>10:00 – Banho / descanso</li>
-    <li>11:00 – Arrumar a casa</li>
-    <li>13:00 – Almoço</li>
-    <li>14:00 – Estudo (1h)</li>
-    <li>15:00 – Caminhada</li>
-    <li>21:00 – Jantar</li>
-    <li>23:00 – Dormir</li>
-  </ul>
-</div>
+<body><h1>📁 Meu Planner de Férias</h1><div class="folders">
+  <div class="folder" onclick="openDay('segunda')">Segunda</div>
+  <div class="folder" onclick="openDay('terca')">Terça</div>
+  <div class="folder" onclick="openDay('quarta')">Quarta</div>
+  <div class="folder" onclick="openDay('quinta')">Quinta</div>
+  <div class="folder" onclick="openDay('sexta')">Sexta</div>
+  <div class="folder" onclick="openDay('sabado')">Sábado</div>
+  <div class="folder" onclick="openDay('domingo')">Domingo</div>
+</div><div id="segunda" class="day">
+  <h2>Segunda-feira</h2>
+  <div class="task"><input type="checkbox"> Academia</div>
+  <div class="task"><input type="checkbox"> Estudar 1h</div>
+  <div class="task"><input type="checkbox"> Arrumar a casa</div>
+</div><div id="terca" class="day">
+  <h2>Terça-feira</h2>
+  <div class="task"><input type="checkbox"> Caminhada</div>
+  <div class="task"><input type="checkbox"> Estudar 1h</div>
+</div><div id="quarta" class="day">
+  <h2>Quarta-feira</h2>
+  <div class="task"><input type="checkbox"> Academia</div>
+  <div class="task"><input type="checkbox"> Arrumar a casa</div>
+</div><div id="quinta" class="day">
+  <h2>Quinta-feira</h2>
+  <div class="task"><input type="checkbox"> Caminhada</div>
+  <div class="task"><input type="checkbox"> Estudar 1h</div>
+</div><div id="sexta" class="day">
+  <h2>Sexta-feira</h2>
+  <div class="task"><input type="checkbox"> Curso (7h–11h)</div>
+</div><div id="sabado" class="day">
+  <h2>Sábado</h2>
+  <div class="task"><input type="checkbox"> Visitar minha vó</div>
+</div><div id="domingo" class="day">
+  <h2>Domingo</h2>
+  <div class="task"><input type="checkbox"> Descanso</div>
+</div><button onclick="closeAll()">⬅ Voltar</button>
 
-<div class="day">
-  <h2>📂 Quarta & Domingo (Vó)</h2>
-  <ul>
-    <li>08:00 – Acordar + café</li>
-    <li>09:00 – Ir para casa da vó</li>
-    <li>13:00 – Almoço</li>
-    <li>18:00 – Voltar para casa</li>
-    <li>19:00 – Estudo (1h)</li>
-    <li>21:00 – Jantar</li>
-    <li>23:00 – Dormir</li>
-  </ul>
-</div>
+<script>
+  function openDay(day) {
+    document.querySelectorAll('.day').forEach(d => d.classList.remove('active'));
+    document.getElementById(day).classList.add('active');
+    window.scrollTo(0<!DOCTYPE html><html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Planner de Férias</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 20px;
+    }h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
 
-<div class="day">
-  <h2>📂 Sexta-feira (Curso)</h2>
-  <ul>
-    <li>07:00 – Curso</li>
-    <li>11:00 – Chegar em casa / descanso</li>
-    <li>
+.folders {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 15px;
+}
+
+.folder {
+  background: white;
+  border-radius: 12px;
+  padding: 20px;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  transition: transform 0.2s;
+}
+
+.folder:hover {
+  transform: scale(1.05);
+}
+
+.day {
+  display: none;
+  margin-top: 20px;
+}
+
+.day.active {
+  display: block;
+}
+
+.task {
+  background: white;
+  padding: 12px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+button {
+  margin-top: 20px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 8px;
+  background: #000;
+  color: white;
+  cursor: pointer;
+}
+
+  </style>
+</head>
+<body><h1>📁 Meu Planner de Férias</h1><div class="folders">
+  <div class="folder" onclick="openDay('segunda')">Segunda</div>
+  <div class="folder" onclick="openDay('terca')">Terça</div>
+  <div class="folder" onclick="openDay('quarta')">Quarta</div>
+  <div class="folder" onclick="openDay('quinta')">Quinta</div>
+  <div class="folder" onclick="openDay('sexta')">Sexta</div>
+  <div class="folder" onclick="openDay('sabado')">Sábado</div>
+  <div class="folder" onclick="openDay('domingo')">Domingo</div>
+</div><div id="segunda" class="day">
+  <h2>Segunda-feira</h2>
+  <div class="task"><input type="checkbox"> Academia</div>
+  <div class="task"><input type="checkbox"> Estudar 1h</div>
+  <div class="task"><input type="checkbox"> Arrumar a casa</div>
+</div><div id="terca" class="day">
+  <h2>Terça-feira</h2>
+  <div class="task"><input type="checkbox"> Caminhada</div>
+  <div class="task"><input type="checkbox"> Estudar 1h</div>
+</div><div id="quarta" class="day">
+  <h2>Quarta-feira</h2>
+  <div class="task"><input type="checkbox"> Academia</div>
+  <div class="task"><input type="checkbox"> Arrumar a casa</div>
+</div><div id="quinta" class="day">
+  <h2>Quinta-feira</h2>
+  <div class="task"><input type="checkbox"> Caminhada</div>
+  <div class="task"><input type="checkbox"> Estudar 1h</div>
+</div><div id="sexta" class="day">
+  <h2>Sexta-feira</h2>
+  <div class="task"><input type="checkbox"> Curso (7h–11h)</div>
+</div><div id="sabado" class="day">
+  <h2>Sábado</h2>
+  <div class="task"><input type="checkbox"> Visitar minha vó</div>
+</div><div id="domingo" class="day">
+  <h2>Domingo</h2>
+  <div class="task"><input type="checkbox"> Descanso</div>
+</div><button onclick="closeAll()">⬅ Voltar</button>
+
+<script>
+  function openDay(day) {
+    document.querySelectorAll('.day').forEach(d => d.classList.remove('active'));
+    document.getElementById(day).classList.add('active');
+    window.scrollTo(0
